# ltl-compare

./: CMakeLists.txt
examples/sub_platform/: sedaDVOjJ
src/exp/: CMakeLists.txt
src/exp/include/expUtils/: expUtils.hh
src/exp/include/visitors/: TokenizerVisitor.hh
src/exp/src/expUtils/: expUtils.cc
src/exp/src/visitors/: TokenizerVisitor.cc
src/ltl-compare/: CMakeLists.txt
src/ltl-compare/include/: ltl-compare.hh
src/ltl-compare/src/: ltl-compare.cc  main.cc
src/miner/modules/: CMakeLists.txt
src/miner/modules/src/propertyQualification/qualifier/: Qualifier.cc
tests/: CMakeLists.txt  ltl-compareTests.cc  tokenizerTests.cc
tests/input/: ltl-compare-ass.txt  ltl-compare-ass1.txt
